# TransLora

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  translora.py
cli/core/: batch_runner.py  config.py  constants.py  context_pass.py  lang_codes.py  live_status.py  prompt.py  srt_parser.py  time_tracker.py  translator.py
cli/core/formats/: __init__.py  ass.py  sbv.py  srt.py  sub.py  types.py  vtt.py
cli/tests/: test_context_pass.py  test_formats.py  test_review_pass.py  test_srt_parser.py  test_time_tracker.py
scripts/: create-releases.sh
web/: .dockerignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
web/src/: index.html  styles.scss
web/src/app/: app.component.html  app.component.scss  app.component.ts
web/src/app/core/: constants.ts  context-pass.ts  file-types.ts  languages.ts  providers.ts  srt-parser.spec.ts  srt-parser.ts  time-tracker.spec.ts  time-tracker.ts  translation-prompt.ts  translation.service.ts
web/src/app/core/subtitle-formats/: ass.ts  index.spec.ts  index.ts  sbv.ts  srt.ts  sub.ts  types.ts  vtt.ts
