[project]
name = "translora"
version = "0.5.0"
description = "AI-powered subtitle translator with batched LLM calls and block-level validation."
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pysubs2>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
